[project]
name = "web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "reportlab>=4.4.3",
    "streamlit>=1.47.1",
    "streamlit-aggrid>=1.1.7",
    "streamlit-folium>=0.25.0",
]
